--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-player": "^2.0.1",
     "react-select": "^3.1.0",
     "react-slick": "^0.25.2",
+    "react-smart-payment-buttons": "^0.2.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^4.4.1",
     "styled-system": "^5.1.5"
